<resources>
    <string name="app_name">拼in</string>
    <string name="bar_login">登录</string>
    <string name="login">登录</string>
    <string name="user_id">用户名</string>
    <string name="user_pass">密码</string>
    <string name="user_forget">忘记密码</string>
    <string name="user_reg">注册</string>
    <string name="old_pass">输入旧密码</string>
    <string name="new_pass">输入新密码</string>
    <string name="confirm_pass">确认新密码</string>
    <string name="confirm_string">确定</string>
    <string name="btn_reset_msg">发送验证码</string>
    <string name="edit_confirm_msg">请输入验证码</string>
    <string name="edit_tel">请输入手机号</string>
    <string name="btn_confirm">下一步</string>
    <string name="str_user_pass">请输入密码</string>
    <string name="str_user_confirm">请再次输入密码</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_bar_text_home">主页</string>
    <string name="tab_bar_text_coupon">优惠券</string>
    <string name="tab_bar_text_msg">消息</string>
    <string name="tab_bar_text_my_info">我的</string>
    <string name="tab_bar_text_broadcast">发布</string>
    <string name="ac_person_name">姓名:</string>
    <string name="ac_person_nick">昵称:</string>
    <string name="ac_person_birth">生日:</string>
    <string name="ac_person_tel">手机号:</string>
    <string name="ac_person_address">地址:</string>
    <string name="total_money">总金额</string>
    <string name="deposit_money">充值</string>
    <string name="withdraw_money">提现</string>
    <string name="good_link">商品地址</string>
</resources>
