<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_forget"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context="com.pinyin.ui.layout.PassResetActivity">
    <include layout="@layout/common_toolbar"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_marginTop="60dp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="250dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dp"
                    android:src="@mipmap/layout_logo"/>
                <EditText
                    android:id="@+id/old_pass"
                    android:hint="@string/old_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    style="@style/Edit.Base"/>
                <EditText
                    android:id="@+id/new_pass"
                    android:hint="@string/new_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    style="@style/Edit.Base"/>
                <EditText
                    android:id="@+id/confirm_pass"
                    android:hint="@string/confirm_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    style="@style/Edit.Base"/>
                <Button
                    android:id="@+id/confirm"
                    android:text="@string/confirm_string"
                    android:layout_marginTop="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/ButtonStyle"/>
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>
