<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_main"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.pinyin.ui.layout.LoginActivity">
    <include layout="@layout/common_toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="250dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="50dp"
                    android:src="@mipmap/layout_logo"/>
                <EditText
                    android:id="@+id/user_id"
                    android:hint="@string/user_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Edit.Base"/>
                <EditText
                    android:id="@+id/user_pass"
                    android:hint="@string/user_pass"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Edit.Base"/>
                <Button
                    android:id="@+id/login"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/login"
                    android:textColor="@color/colorAccent"
                    android:layout_marginTop="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/ButtonStyle"/>
                 <LinearLayout
                    android:layout_alignBottom="@id/login"
                     android:layout_marginTop="80dp"
                     android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                     <Button
                         android:id="@+id/register"
                         android:text="@string/user_reg"
                         style="@style/ButtonRound"
                         android:layout_marginRight="90dp"
                         android:textSize="14dp"
                         android:layout_width="80dp"
                         android:layout_height="25dp"
                         android:background="@drawable/round_button_selector"/>
                     <Button
                         android:id="@+id/forget"
                         android:text="@string/user_forget"
                         style="@style/ButtonRound"
                         android:textSize="14dp"
                         android:layout_width="80dp"
                         android:layout_height="25dp"
                         android:background="@drawable/round_button_selector"/>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>
